--- a/.github/workflows/webapp_main_build.yml
+++ b/.github/workflows/webapp_main_build.yml
@@ -15,7 +15,7 @@ jobs:
       run: npm i
 
     - name: Build prod project
-      run: ng build --prod
+      run: npm run build
 
 
 #     - name: Deploy to environment
