--- a/.github/workflows/webapp_main_build.yml
+++ b/.github/workflows/webapp_main_build.yml
@@ -10,13 +10,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-
+    - uses: actions/cache@v1
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
     - name: Install packages
       run: npm i
 
     - name: Build prod project
       run: npm run build
 
-
-#     - name: Deploy to environment
-#       run:
+    - name: Deploy
+      uses: JamesIves/github-pages-deploy-action@releases/v3
+      with:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        BRANCH: gh-pages
+        FOLDER: dist/ddgtopicsexplorer
