--- a/.github/workflows/webapp_main_build.yml
+++ b/.github/workflows/webapp_main_build.yml
@@ -20,7 +20,7 @@ jobs:
       run: npm i
 
     - name: Build prod project
-      run: npm run build
+      run: npm run deploybuild
 
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@releases/v3
